--- a/main.html
+++ b/main.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <title>Why Software?</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+  <h1>Why I want to become a developer?</h1>
+  
+  <p>I have always been fascinated by the power of technology and its ability to solve problems and make a positive impact on people's lives. As a software developer, I see endless opportunities to create innovative solutions, build user-friendly applications, and contribute to the digital transformation of various industries.</p>
+  
 </body>
-
 </html>
